add container and image modules
